--- a/templates/pokedex.html
+++ b/templates/pokedex.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
 </head>
-<body>
+    <body>
+<html>
     <div>
         <form action="Search Pokémon" method="POST">
-            <input placeholder="Search Pokémon" name="name" type="text"> 
-            <button typer="submit" name="Search Pokémon">Search Pokémon</button>
+            <input name="name" type="text"> 
+            <button class="button" typer="submit" name="Search Pokémon">Search Pokémon</button>
         </form>
     <div>
         <img class="pokeimage" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/95.png">
     </div>
     </div>
-    <html>
         <body>
             <div id="container">
                 <img src="{{ user_image }}">
             </div>
-        </body>
+    </body>
 </html>
