--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -18,3 +18,25 @@ html,body,#container {
     text-align: center;
     width:30%
 }
+
+.button {
+    background: color-btn;
+    border-radius: 0.7em;
+    box-shadow: 0 5px 0 #0A7237;
+    color: #fff;
+    font-size: 2em;
+    font-weight: 500;
+    text-shadow: 0 2px 0 #0A7237;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 148px;
+    height: 70px;
+    margin-left: -(148px/2);
+    margin-top: -(70px/2);
+    will-change: transform;
+    transform: translateY(0px) translateZ(0px);
+    line-height: 70px;
+    transition: all (hover - 100) ease;
+}
