--- a/templates/pokedex.html
+++ b/templates/pokedex.html
@@ -9,18 +9,12 @@
 </head>
     <body>
 <html>
-    <div>
+    <!-- <div>
         <form action="Search Pokémon" method="POST">
             <input name="name" type="text"> 
             <button class="button" typer="submit" name="Search Pokémon">Search Pokémon</button>
-        </form>
-    <div>
-        <img class="pokeimage" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/95.png">
-    </div>
-    </div>
-        <body>
-            <div id="container">
-                <img src="{{ user_image }}">
-            </div>
+        </form> -->
+    <img class="Pokemon" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" />
+    <img class="Pokedex" src="{{ user_image }}" />
     </body>
 </html>
