--- a/templates/pokedex.html
+++ b/templates/pokedex.html
@@ -14,7 +14,9 @@
             <input name="name" type="text"> 
             <button class="button" typer="submit" name="Search Pokémon">Search Pokémon</button>
         </form> -->
-    <img class="Pokemon" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" />
-    <img class="Pokedex" src="{{ user_image }}" />
+    <div "parent">
+        <img class="Pokemon" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/687.png" />
+        <img class="Pokedex" src="{{ user_image }}" />
+    </div>
     </body>
 </html>
